test/nexj/invalidbase/messages/CircularInheritance_C.message
<Message base="CircularInheritance_A">
   <Parts>
      <Value name="c" type="string"/>
   </Parts>
</Message>
